# prcpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
PointVector/: Person.cpp  Person.h  Point.h  PointVector.h  PointVectorRaw.h
Uebung1/: .gitignore  CMakeLists.txt  Makefile
Uebung1/Wave/: audio.cpp
Uebung2/: CMakeLists.txt  README.md  beobachtungen.md
Uebung2/PerlinNoise/: main.cpp
Uebung2/PerlinNoise/include/PerlinNoise/: Image.h  PGMWriter.h  PerlinNoiseGenerator.h  Random.h  Util.h  Vector2d.h
Uebung2/PerlinNoise/src/: PerlinNoiseGenerator.cpp  Vector2d.cpp
Uebung2/Tests/PerlinNoise/: Test_PerlinNoise.cpp
Uebung2/output/: perlinNoise_0.pgm  perlinNoise_123.pgm  perlinNoise_256.pgm  perlinNoise_42.pgm  perlinNoise_7.pgm  perlinNoise_99.pgm
Uebung3/: CMakeLists.txt  PostfixInterpreter.sln  README.md
Uebung3/Code/: CMakeLists.txt
Uebung3/Code/PostfixInterpreter/: PostfixInterpreter.vcxproj  VariadicInterpreter.hpp
Uebung3/Code/PostfixInterpreter/x64/Debug/PostfixI.a7df7262.tlog/: CL.read.1.tlog  link.write.1.tlog
Uebung3/Code/UnitTest/: UnitTest1.cpp  UnitTest2.cpp  UnitTest3.cpp
Uebung3/Code/UnitTest/x64/Debug/: UnitTest.dll.recipe
Uebung3/Code/UnitTest/x64/Debug/UnitTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.read.1.tlog  link.write.1.tlog
Uebung3/Code/UnitTest2/: CMakeLists.txt  UnitTest1.cpp  UnitTest3.cpp
Uebung3/Code/UnitTest2/x64/Debug/: UnitTest2.exe.recipe
Uebung3/Code/UnitTest2/x64/Debug/UnitTest2.tlog/: CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  link.command.1.tlog  link.read.1.tlog
Uebung3/Code/UnitTest2/x64/Release/UnitTest2.tlog/: CL.read.1.tlog  CopyLocal.write.1u.tlog  link.command.1.tlog  link.write.1.tlog
Uebung3/PostfixInterpreter/: GenericInterpreter.hpp  IntegerInterpreter.h  Main.cpp  PostfixInterpreter.vcxproj.filters
Uebung3/PostfixInterpreter/x64/Debug/: PostfixInterpreter.exe.recipe
Uebung3/PostfixInterpreter/x64/Debug/PostfixI.a7df7262.tlog/: CL.command.1.tlog  CL.write.1.tlog  PostfixInterpreter.lastbuildstate  link.command.1.tlog  link.read.1.tlog
Uebung3/UnitTest/: UnitTest.vcxproj  UnitTest.vcxproj.filters  UnitTest4.cpp
Uebung3/UnitTest/x64/Debug/UnitTest.tlog/: link.command.1.tlog  link.write.2u.tlog
Uebung3/UnitTest2/: UnitTest2.cpp  UnitTest2.vcxproj  UnitTest4.cpp
Uebung3/UnitTest2/x64/Debug/: UnitTest2.vcxproj.FileListAbsolute.txt
Uebung3/UnitTest2/x64/Debug/UnitTest2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.write.1.tlog
Uebung3/UnitTest2/x64/Release/: UnitTest2.exe.recipe  UnitTest2.vcxproj.FileListAbsolute.txt
Uebung3/UnitTest2/x64/Release/UnitTest2.tlog/: CL.command.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  UnitTest2.lastbuildstate  link.read.1.tlog
include/: ex1.h  ex10.h  ex11.h  ex2.h  ex3.h  ex4.h  ex5.h  ex6.h  ex7.h  ex8.h  ex9.h
lecture-code/PointVector/: CMakeLists.txt  Human.h  Person.cpp  Person.h  Point.h  Student.h
notes/: lecture-6.md  zsm.md
src/: ex1.cpp  ex10.cpp  ex11.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp  main.cpp  other.cpp
